--- a/app/src/main/res/menu/menyu.xml
+++ b/app/src/main/res/menu/menyu.xml
@@ -4,14 +4,14 @@
     <item
         android:id="@+id/action_seting"
         android:orderInCategory="100"
-        android:title="@string/action_settings"/>
+        android:title="action_settings"/>
     <item
         android:id="@+id/action_share"
-        android:title="@string/action_share"
+        android:title="action_share"
         app:showAsAction="never"/>
     <item
         android:id="@+id/action_exit"
-        android:title="@string/action_exit"
+        android:title="action_exit"
         app:showAsAction="never"/>
 
 </menu>
